# hive

./: .gitignore  .hive.toml  .pre-commit-config.yaml  CLAUDE_TECHNICAL_DESIGN_DOC.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
.claude/: CLAUDE.md
.github/workflows/: ci.yml
.hive/: project-context.md
.jules/: bolt.md
.opencode/agents/: queen.md
00/b3caa6fb68/: metadata.json
02/4d14b6ce2c/: metadata.json
04/0722fdef20/: metadata.json
04/1a5ee10e8d/: metadata.json
08/4b5ae5e3a1/: metadata.json
0a/130bcfb127/: metadata.json
0a/49d6229876/: metadata.json
10/b289a1c95f/: metadata.json
11/945aebd39a/: metadata.json
14/46e204a6e9/: metadata.json
14/4fac088ffa/: metadata.json
17/4134e5b3bf/: metadata.json
1a/d94ad0d16b/: metadata.json
1e/4d574b3f25/: metadata.json
1f/0511807b35/: metadata.json
1f/3f7b98ba58/: metadata.json
1f/e308d8cf49/: metadata.json
24/47ed1ab9fa/: metadata.json
25/448f781a5a/: metadata.json
2c/122422c0da/: metadata.json
2c/a6f0c9f88d/: metadata.json
2e/4064bb8224/: metadata.json
2f/da78848400/: metadata.json
39/e1d85f7cba/: metadata.json
39/f73d2fbb43/: metadata.json
3b/02b5bdc537/: metadata.json
3b/9430f9162f/: metadata.json
3d/691c619e83/: metadata.json
3e/cd70b0c27c/: metadata.json
44/6413cf91a5/: metadata.json
44/a712daf4d0/: metadata.json
47/1591e13656/: metadata.json
4a/14fcd3ae26/: metadata.json
50/86e3d3a840/: metadata.json
docs/: ABBR.md  ABBR_ADOPTION.md  IMPLEMENTATION_NOTES.md  NOTES_SPEC.md  ORCHESTRATOR_LOC_REDUCTION_PLAN.md  ORCHESTRATOR_REFACTOR_PLAN.md  RACE_CONDITION_AUDIT.md  STATE_MACHINE_SIMPLIFICATION.md  TECHNICAL_DESIGN_DOC.md  blog_agent_teams_reverse_engineered.md  codebase_review.md  design_prompt_unification.md  design_test_cleanup.md
scripts/: mutate.sh
tests/: __init__.py  conftest.py  fake_backend.py  test_backend_codex.py  test_backend_opencode.py  test_backend_pool.py  test_claude_ws.py  test_cli.py  test_config.py  test_cost_guardrails.py  test_db.py  test_diag.py  test_doctor.py  test_git.py  test_ids.py  test_integration.py  test_merge.py  test_merge_policy_contract.py  test_merge_refinery_first.py  test_metrics.py  test_multiworker.py  test_opencode.py  test_orchestrator.py  test_project_isolation.py  test_prompts.py  test_queen.py  test_race_conditions.py  test_sse.py  test_status.py  test_terminate_process_group.py  test_utils.py
(+471 files in other folders)
