[project]
name = "hive"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "rich>=13.9.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
ui = ['datasette>=0.65']
dev = [
    "ty>=0.0.23",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.5.0",
    "datasette>=0.65",
]

[project.scripts]
hive = "hive.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hive"]

[tool.ruff]
line-length = 144

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.ty.src]
exclude = ["analysis-output"]

[dependency-groups]
dev = [
    "ty>=0.0.23",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.5.0",
    "datasette>=0.65",
]
