[project]
name = "hive"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "rich>=13.9.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
ui = ['datasette>=0.65']
dev = [
    "ty>=0.0.23",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.5.0",
    "datasette>=0.65",
    "mutmut>=3.0",
]

[project.scripts]
hive = "hive.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hive"]

[tool.ruff]
line-length = 144

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.ty.src]
exclude = ["analysis-output"]

[tool.mutmut]
paths_to_mutate = [
    "src/hive/status.py",
    "src/hive/config.py",
    "src/hive/utils.py",
    "src/hive/git.py",
    "src/hive/db/core.py",
    "src/hive/db/issues.py",
    "src/hive/db/metrics.py",
    "src/hive/db/notes.py",
    "src/hive/orchestrator/completion.py",
]
tests_dir = ["tests/"]
pytest_add_cli_args = ["-x", "-n", "0", "--timeout=10", "-q", "-o", "addopts=", "--override-ini=pythonpath=src"]
also_copy = ["src/"]

[dependency-groups]
dev = [
    "ty>=0.0.23",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.5.0",
    "datasette>=0.65",
    "mutmut>=3.0",
]
